--- a/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-생성-템플릿.md
@@ -7,8 +7,12 @@ assignees: ''
 
 ---
 
-## (제목)
-### (브랜치)
+## 추가할 기능
 
-- [] 구현 내용
-- [] 구현 내용
+> 기능에 대한 설명
+
+## 작업 상세 내용
+
+- [ ] TODO
+- [ ] TODO
+- [ ] TODO
